Prevent box overlap from showing (#92808)

--- a/client/layout/masterbar/style.scss
+++ b/client/layout/masterbar/style.scss
@@ -919,7 +919,7 @@ body.is-mobile-app-view {
 
 	.masterbar__item-subitems {
 		min-width: 264px !important;
-		max-height: 90px;
+		max-height: 94px;
 		padding: 12px 0 0 0;
 
 		@media only screen and (max-width: 782px) {
